# ChangeLog for gnome-base/gnome-panel
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-panel/ChangeLog,v 1.280 2009/05/13 14:22:12 dang Exp $

  13 May 2009; Daniel Gryniewicz <dang@gentoo.org>
  gnome-panel-2.26.1.ebuild:
  undo Fix0r bug 269683; turns out it was a misunderstanding

  13 May 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
  gnome-panel-2.26.1.ebuild:
  Fix0r bug 269683 -- x11-libs/cairo[X]

*gnome-panel-2.26.1 (11 May 2009)

  11 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
  gnome-panel-2.20.3.ebuild, -gnome-panel-2.22.2.ebuild,
  -gnome-panel-2.24.3.ebuild, +gnome-panel-2.26.1.ebuild:
  New version for GNOME 2.26. Drop libgnome/libgnomeui dependencies. Real
  transparency in notification area. Clean up old revisions.

  27 Apr 2009; Jeroen Roovers <jer@gentoo.org> gnome-panel-2.24.3-r1:
  Stable for HPPA (bug #260063).

  27 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  gnome-panel-2.24.3-r1.ebuild:
  arm stable

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  gnome-panel-2.24.3-r1.ebuild:
  Stable on sparc, bug #260063

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  gnome-panel-2.24.3-r1.ebuild:
  alpha/ia64 stable wrt #260063

  15 Mar 2009; Markus Meier <maekke@gentoo.org>
  gnome-panel-2.24.3-r1.ebuild:
  x86 stable, bug #260063

  11 Mar 2009; Daniel Gryniewicz <dang@gentoo.org>
  gnome-panel-2.24.3-r1.ebuild:
  Marked stable on amd64

  06 Mar 2009; Brent Baude <ranger@gentoo.org> gnome-panel-2.24.3-r1.ebuild:
  Marking gnome-panel-2.24.3-r1 ppc stable for bug 260063

  05 Mar 2009; Brent Baude <ranger@gentoo.org> gnome-panel-2.24.3-r1.ebuild:
  Marking gnome-panel-2.24.3-r1 ppc64 stable for bug 260063

*gnome-panel-2.24.3-r1 (26 Feb 2009)

  26 Feb 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -files/gnome-panel-2.24.1-logout.patch.gz,
  +files/gnome-panel-2.24.3-shutdown.patch, -gnome-panel-2.24.2-r1.ebuild,
  +gnome-panel-2.24.3-r1.ebuild: