@@ -5,8 +5,10 @@ DIST gnome-panel-2.24.2-logout+po.tar.bz2 75365 RMD160 dadb220e3505fdd37bbddd332
 DIST gnome-panel-2.24.3.tar.bz2 3354686 RMD160 ac38a86fd844d4e7d27c9785dc27a0327d83809f SHA1 46a115529c2e6ef5429e58e5389ad44660aff428 SHA256 2b52f9cd5b3e028f5e67b75af6c484f21cd208e4403041ea1b4d831d67fc21b0
 DIST gnome-panel-2.26.1-po.patch.bz2 74923 RMD160 8d5ef69ba9789a83eb5d00c2c7f4309c565ec37b SHA1 56b2bf2220ca25c638b4d009aa3ab57bb76f1dde SHA256 720539ee1b0e85fa6f668bce30c45120b6b821e980fedf8049b99c145d0b509c
 DIST gnome-panel-2.26.1.tar.bz2 3424402 RMD160 d540181806588e13b6cf540f47d4e2835670d7c8 SHA1 58ee6b53950183f7f1df805bd530bf894eacd128 SHA256 4e3b653d274c5150c5165eee84ec5cd6c0f0425407316ae01c6c166a13f320b2
+DIST gnome-panel-2.26.2.tar.bz2 2985531 RMD160 e3cc7f64ace7df7a133f2b4128c9b3e615b42634 SHA1 56ba614bad49597bff5127cf8b2a83944b9fabca SHA256 eb4140361c4d695e8c7c89af45e4e97ff4db329ee3b062609bcc8021a580f0e9
 EBUILD gnome-panel-2.20.3.ebuild 2064 RMD160 519627687bd60d9ced5d54628fd26df31fa2fffa SHA1 0ce8ec178a6678439c13113a0e25a9758a360d5f SHA256 3efe6aacce1632b655b9a6e21c83ad3efa974b33bfae142218c640cd8b5a9524
 EBUILD gnome-panel-2.24.3-r1.ebuild 2626 RMD160 ff143557cdf1209c2092ebafbd872ed9c7b217b8 SHA1 955adc1b3b2ca902cfd1f05edc72b1aab248ee68 SHA256 3658baa1aeaabbebd0d225146e032f49bf093294bcf6b3844ed460470afde0ac
 EBUILD gnome-panel-2.26.1.ebuild 3161 RMD160 cdd83352d9cccb6731e2723c3c15eb30fac66e3a SHA1 ede731d9ad81b766ff6fd1215b3a6e03e60da3bb SHA256 ef8d4c13425e41a9f5996ff28ec35225f9b84f12aef2dc715e5fbf9a634af462
-MISC ChangeLog 38059 RMD160 9f27a428a9454de2672ca3584a08f937fec355a9 SHA1 1ebf1cc1d65b2ddd57f9b7ac72d8dadeaead205d SHA256 131e3330420b8ad6f592705c139acb1a1f8ab073c05f1160e650cd5ab282e783
+EBUILD gnome-panel-2.26.2.ebuild 3230 RMD160 bfcde4a5e5a444ea6ef2520a6b59679f8ececbfc SHA1 14f6cb79323911a51a06df3eaf7c87b7767db806 SHA256 800f30adf41c117404f3fda2ec0ce9b8605621ecc14ed6b341bd6280c3f4d17e
+MISC ChangeLog 38381 RMD160 bcce809d25f41bb438570aa647526a9022ac2501 SHA1 6a898f4083260f34472eb4b7114f030c75adbc91 SHA256 0c4ae0adfb59650089eed646c1f38845c33e97e0fe624b410020cc8ff912bcc0
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
