@@ -1,6 +1,16 @@
 # ChangeLog for gnome-base/gnome-panel
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-panel/ChangeLog,v 1.280 2009/05/13 14:22:12 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-panel/ChangeLog,v 1.281 2009/05/28 22:20:56 eva Exp $
+
+  28 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
+  +gnome-panel-2.26.2.ebuild:
+  Bump to 2.26.2. Small bug fixes and translation updates.
+
+*gnome-panel-2.26.2 (28 May 2009)
+
+  28 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
+  +gnome-panel-2.26.2.ebuild:
+  Bump to 2.26.2. Small bug fixes and translation updates.
 
   13 May 2009; Daniel Gryniewicz <dang@gentoo.org>
   gnome-panel-2.26.1.ebuild:
